ldproxy target enhancements
* add target parameter to define the api id (closes #481)
* support generation of code list files in subfolders (closes #482)
* support building blocks Projections, Sorting, and Features - Result
Type (closes #483)
* additional fixes:
  * Fix test in Main.java to ensure that ShapeChange is executed with
Java 21.
  * Fix a couple of deprecation warnings.
  * Fix Javadoc generation.

Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>